--- a/shared-library/Jenkinsfile
+++ b/shared-library/Jenkinsfile
@@ -5,11 +5,13 @@ pipeline {
           stage(cloning) {
                 steps {
                       cloning("https://github.com/Rahul-Palande11/SRE-PATH.git","main")
-                    }
-                              steps {
-                                  build()
-                              }
+                    }                    
                           }
-                  }
+        stage('build') {
+                steps {
+                   build()
+                }
+              }
         }
+}
   
