--- a/shared-library/Jenkinsfile
+++ b/shared-library/Jenkinsfile
@@ -9,6 +9,7 @@ pipeline {
                           }
         stage('build') {
                 steps {
+                  echo "hhhh"
                        build()
                 }
               }
